fixed course buy button covered

--- a/src/pages/ProductDetails/CourseDetails/style.module.scss
+++ b/src/pages/ProductDetails/CourseDetails/style.module.scss
@@ -50,6 +50,10 @@
     .courseCoverImage {
       object-fit: cover;
       min-height: 320px;
+
+      @media screen and (max-width:992px) {
+        min-height: 550px;
+      }
     }
 
     .courseBuyContainer {
